@@ -1,5 +1,15 @@
 2019-06-21  Jay Berkenbilt  <ejb@ql.org>
 
+	* When supported, qpdf builds with -fvisibility=hidden, which
+	removes non-exported symbols from the shared library in a manner
+	similar to how Windows DLLs work. This is better for performance
+	and also better for safety and protection of private interfaces.
+	See https://gcc.gnu.org/wiki/Visibility. *NOTE*: If you are
+	getting linker errors trying to catch exceptions or derive things
+	from a base class in the qpdf library, it's possible that a
+	QPDF_DLL_CLASS declaration is missing somewhere. Please report
+	this as a bug at https://github.com/qpdf/qpdf/issues.
+
 	* Source-level incompatibility: remove the version
 	QPDF::copyForeignObject with an unused boolean parameter. If you
 	were, for some reason, calling this, just take the parameter away.
